Create persistent vector store

--- a/create_db.ipynb
+++ b/create_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "id": "ea8e1300",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "27633c98",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "60faa625",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
        "   'Subsection No.': '166.'}}]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "id": "c47b70eb",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "id": "4db47635",
    "metadata": {},
    "outputs": [],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "id": "7f525207",
    "metadata": {},
    "outputs": [],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "id": "f3b92525",
    "metadata": {},
    "outputs": [],
@@ -243,8 +243,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "a88dc684",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorstore.save_local(\"faiss_index_constitution\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a635459f",
+   "id": "90bc38a1",
    "metadata": {},
    "outputs": [],
    "source": []
