--- a/create_db.ipynb
+++ b/create_db.ipynb
@@ -11,8 +11,7 @@
     "from langchain_ollama import OllamaEmbeddings\n",
     "from langchain.vectorstores import FAISS\n",
     "from langchain.schema import Document\n",
-    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
-    "from langchain_core.embeddings import Embeddings\n"
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter"
    ]
   },
   {
@@ -195,26 +194,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4db47635",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class ollamaEmbeddings(Embeddings):\n",
-    "    def __init__(self, model):\n",
-    "        self.model = model\n",
-    "\n",
-    "    def embed_documents(self, texts):\n",
-    "        \"\"\"Embed search docs.\"\"\"\n",
-    "        return [self.model.embed_query(text) for text in texts]\n",
-    "\n",
-    "    def embed_query(self, text):\n",
-    "        \"\"\"Embed query text.\"\"\"\n",
-    "        return self.model.embed_query(text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "id": "7f525207",
    "metadata": {},
    "outputs": [],
@@ -230,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "f3b92525",
    "metadata": {},
    "outputs": [],
@@ -251,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90bc38a1",
+   "id": "fc81f548",
    "metadata": {},
    "outputs": [],
    "source": []
